Done with final project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>StarTask</title>
-  <meta name="description" content="">
+  <meta name="description" content="StarTask is a task management website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Bagel Fat One' rel='stylesheet'>
+  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Gluten' rel='stylesheet'>
   <link rel="icon" href="/img/star.png">
 </head>
@@ -25,7 +25,7 @@
 
       <div class="input-group">
         <img id="password-img" src="img/password.png" alt="password icon">
-        <input id="login-password" name="login-password" type="password"  placeholder="Password...">
+        <input id="login-password" name="login-password" type="password" placeholder="Password...">
         <img src="img/eye.png" alt="show password" id="toggle-password" style="cursor: pointer">
       </div>
     </div>
@@ -33,7 +33,8 @@
     <button id="login-btn">Login</button>
     <p>This is not a real login page,<br> just click <em>Login</em> to continue <br>to the rest of the site!</p>
   </div>
-  <script type="module" src="js/main.js"></script>
+
+  <script type="module" src="/js/main.js" defer></script>
 </body>
 
 </html>
